--- a/config/sync/core.entity_view_display.media.image.newsletter.yml
+++ b/config/sync/core.entity_view_display.media.image.newsletter.yml
@@ -1,8 +1,9 @@
-uuid: 27b50400-bed1-4df1-8156-683b31401e4e
+uuid: 813ec5a2-7501-4fd3-be43-9e16ca274f16
 langcode: fr
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.newsletter
     - field.field.media.image.field_media_image
     - field.field.media.image.field_tag_media
     - media.type.image
@@ -10,13 +11,13 @@ dependencies:
     - image
 _core:
   default_config_hash: jOwnt_yq6AKAfqU6f0xKnxEkFQ2eTPJWxrk3WMLbL68
-id: media.image.default
+id: media.image.newsletter
 targetEntityType: media
 bundle: image
-mode: default
+mode: newsletter
 content:
   field_media_image:
-    label: hidden
+    label: visually_hidden
     settings:
       image_style: ''
       image_link: file
