--- a/config/sync/field.field.node.newsletter_agenda.field_evenements.yml
+++ b/config/sync/field.field.node.newsletter_agenda.field_evenements.yml
@@ -20,6 +20,6 @@ settings:
   handler_settings:
     view:
       view_name: events
-      display_name: entity_reference_1
+      display_name: entity_reference_newsletter
       arguments: {  }
 field_type: entity_reference
