theme,js and library up de clarify js newsletter article code.

--- a/web/themes/contrib/ensemble/less/ensemble.libraries.yml
+++ b/web/themes/contrib/ensemble/less/ensemble.libraries.yml
@@ -76,9 +76,13 @@ monthevents:
   dependencies:
       - core/jquery
 
-newsletter:
+newsletteragenda:
   js:
-    js/newsletter/newsletter.js: {}
+    js/newsletter/newsletteragenda.js: {}
   dependencies:
       - core/jquery
-      
+newsletterarticles:
+  js:
+    js/newsletter/newsletterarticle.js: {}
+  dependencies:
+      - core/jquery
