--- a/config/sync/field.field.node.newsletter_articles.field_code_a_copier.yml
+++ b/config/sync/field.field.node.newsletter_articles.field_code_a_copier.yml
@@ -13,7 +13,9 @@ label: 'Code à copier'
 description: 'Texte à copier pour le coller dans mailjet'
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    value: 'Code à copier'
 default_value_callback: ''
 settings: {  }
 field_type: string_long
