--- a/config/sync/field.field.node.event.field_address.yml
+++ b/config/sync/field.field.node.event.field_address.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: event
 label: Adresse
 description: 'Adresse précise pour le grand public.'
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
