--- a/config/sync/field.field.node.newsletter_articles.field_articles.yml
+++ b/config/sync/field.field.node.newsletter_articles.field_articles.yml
@@ -19,7 +19,7 @@ settings:
   handler: views
   handler_settings:
     view:
-      view_name: events
-      display_name: entity_reference_newsletter
+      view_name: articles
+      display_name: entity_reference_nl_articles
       arguments: {  }
 field_type: entity_reference
