--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -37,6 +37,7 @@ permissions:
   - 'create image media'
   - 'create media'
   - 'create newsletter_agenda content'
+  - 'create newsletter_articles content'
   - 'create page content'
   - 'create terms in tag_media'
   - 'create video_embed media'
@@ -49,6 +50,7 @@ permissions:
   - 'delete any image media'
   - 'delete any media'
   - 'delete any newsletter_agenda content'
+  - 'delete any newsletter_articles content'
   - 'delete any page content'
   - 'delete any video_embed media'
   - 'delete any webform content'
@@ -57,12 +59,14 @@ permissions:
   - 'delete event revisions'
   - 'delete media'
   - 'delete newsletter_agenda revisions'
+  - 'delete newsletter_articles revisions'
   - 'delete own argumentaire content'
   - 'delete own article content'
   - 'delete own audio media'
   - 'delete own event content'
   - 'delete own file media'
   - 'delete own image media'
+  - 'delete own newsletter_articles content'
   - 'delete own page content'
   - 'delete own video_embed media'
   - 'delete own webform content'
@@ -77,6 +81,7 @@ permissions:
   - 'edit any file media'
   - 'edit any image media'
   - 'edit any newsletter_agenda content'
+  - 'edit any newsletter_articles content'
   - 'edit any page content'
   - 'edit any video_embed media'
   - 'edit any webform content'
@@ -85,6 +90,7 @@ permissions:
   - 'edit own event content'
   - 'edit own file media'
   - 'edit own image media'
+  - 'edit own newsletter_articles content'
   - 'edit own page content'
   - 'edit own video_embed media'
   - 'edit terms in event_type'
@@ -92,6 +98,7 @@ permissions:
   - 'edit terms in tags'
   - 'execute php code'
   - 'revert article revisions'
+  - 'revert newsletter_articles revisions'
   - 'switch users'
   - 'update any media'
   - 'update media'
@@ -111,4 +118,5 @@ permissions:
   - 'view article revisions'
   - 'view event revisions'
   - 'view latest version'
+  - 'view newsletter_articles revisions'
   - 'view the administration theme'
