--- a/config/sync/core.entity_view_display.node.article.liste.yml
+++ b/config/sync/core.entity_view_display.node.article.liste.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.field_home_slideshow
     - field.field.node.article.field_image
+    - field.field.node.article.field_referencement
     - field.field.node.article.field_release_date
     - field.field.node.article.field_thematique
     - node.type.article
