--- a/config/sync/core.entity_view_display.node.event.reunion.yml
+++ b/config/sync/core.entity_view_display.node.event.reunion.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.event.field_image
     - field.field.node.event.field_inscription
     - field.field.node.event.field_place
+    - field.field.node.event.field_referencement
     - field.field.node.event.field_release_date
     - field.field.node.event.field_ville
     - node.type.event
