--- a/config/sync/core.entity_view_display.node.webform.teaser.yml
+++ b/config/sync/core.entity_view_display.node.webform.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.webform.body
+    - field.field.node.webform.field_referencement
     - field.field.node.webform.webform
     - node.type.webform
   module:
