--- a/config/sync/views.view.articles.yml
+++ b/config/sync/views.view.articles.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.liste
     - core.entity_view_mode.node.teaser
+    - field.storage.node.field_image
     - node.type.article
     - system.menu.main
     - taxonomy.vocabulary.event_type
@@ -460,54 +461,10 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
-        field_release_date_end_value:
-          id: field_release_date_end_value
-          table: node__field_release_date
-          field: field_release_date_end_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>'
-          value:
-            min: ''
-            max: ''
-            value: '-3 months'
-            type: offset
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: datetime
       defaults:
         filters: false
         filter_groups: false
         fields: false
-        sorts: false
       filter_groups:
         operator: AND
         groups:
@@ -560,6 +517,69 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_image:
+          id: field_image
+          table: node__field_image
+          field: field_image
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: image
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_view
+          settings:
+            view_mode: newsletter
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       row:
         type: entity_reference
         options:
@@ -567,21 +587,6 @@ display:
           inline: {  }
           separator: '-'
           hide_empty: false
-      sorts:
-        field_release_date_end_value:
-          id: field_release_date_end_value
-          table: node__field_release_date
-          field: field_release_date_end_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: DESC
-          exposed: false
-          expose:
-            label: ''
-          granularity: second
-          plugin_id: datetime
-          entity_type: node
     cache_metadata:
       max-age: -1
       contexts:
@@ -589,7 +594,8 @@ display:
         - 'languages:language_interface'
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_image'
   page_articles:
     display_plugin: page
     id: page_articles
