ensemble.libraries.yml up to use style.css instead of style.min.css.

--- a/web/themes/contrib/ensemble/less/ensemble.libraries.yml
+++ b/web/themes/contrib/ensemble/less/ensemble.libraries.yml
@@ -1,7 +1,7 @@
 framework:
   css:
     theme:
-      css/style.min.css: {}
+      css/style.css: {}
   js:
     bootstrap/js/affix.js: {}
     bootstrap/js/alert.js: {}
