--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -19,6 +19,7 @@ dependencies:
     - field.field.node.event.field_release_date
     - field.field.node.event.field_ville
     - node.type.event
+    - workflows.workflow.editorial
   module:
     - content_moderation
     - datetime_range
@@ -65,12 +66,14 @@ content:
     settings:
       hour_format: 24h
       allow_times: '15'
+      allowed_hours: ''
       exclude_date: ''
       datetimepicker_theme: default
       min_date: ''
       max_date: ''
       year_start: ''
       year_end: ''
+      allow_blank: '1'
       disable_days:
         1: 0
         2: 0
@@ -80,8 +83,7 @@ content:
         6: 0
         7: 0
       inline: 0
-      allowed_hours: ''
-      mask: false
+      mask: 0
     third_party_settings: {  }
     type: single_date_time_widget
     region: content
