--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -27,6 +27,7 @@ module:
   draggableviews: 0
   dynamic_page_cache: 0
   editor: 0
+  editor_advanced_link: 0
   embed: 0
   ensemble_migrate: 0
   entity_browser: 0
