--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -1516,7 +1516,7 @@ display:
           type: datetime_custom
           settings:
             timezone_override: ''
-            date_format: d/m/Y
+            date_format: 'l d/m/Y'
           group_column: value
           group_columns: {  }
           group_rows: false
