--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "drupal/devel": "^1.2",
         "drupal/draggableviews": "^1.0",
         "drupal/ds": "^3.1",
+        "drupal/editor_advanced_link": "^1.4",
         "drupal/entity_browser": "^2.0.0",
         "drupal/entity_embed": "^1.0@beta",
         "drupal/exclude_node_title": "^1.0@beta",
