--- a/config/sync/views.view.articles.yml
+++ b/config/sync/views.view.articles.yml
@@ -532,10 +532,10 @@ display:
           separator: '-'
           hide_empty: false
       sorts:
-        field_release_date_end_value:
-          id: field_release_date_end_value
-          table: node__field_release_date
-          field: field_release_date_end_value
+        created:
+          id: created
+          table: node_field_data
+          field: created
           relationship: none
           group_type: group
           admin_label: ''
@@ -544,8 +544,9 @@ display:
           expose:
             label: ''
           granularity: second
-          plugin_id: datetime
           entity_type: node
+          entity_field: created
+          plugin_id: date
     cache_metadata:
       max-age: -1
       contexts:
