cotent type nl articles modified to better manage import of articles in the good rank.

--- a/config/sync/views.view.articles.yml
+++ b/config/sync/views.view.articles.yml
@@ -547,6 +547,11 @@ display:
           entity_type: node
           entity_field: created
           plugin_id: date
+      pager:
+        type: some
+        options:
+          items_per_page: 30
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
