--- a/config/sync/metatag.metatag_defaults.front.yml
+++ b/config/sync/metatag.metatag_defaults.front.yml
@@ -9,3 +9,4 @@ label: 'Page d''accueil'
 tags:
   canonical_url: '[site:url]'
   shortlink: '[site:url]'
+  title: 'Pour une alternative de gauche écologiste et solidaire - Ensemble!'
