--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -20,7 +20,7 @@ settings:
   default_form_file_limit: ''
   form_classes: "container-inline clearfix\nform--inline clearfix\nmessages messages--error\nmessages messages--warning\nmessages messages--status\n"
   button_classes: ''
-  default_wizard_prev_button_label: '< Page précédente'
+  default_wizard_prev_button_label: '< Précédent'
   default_wizard_next_button_label: 'Page suivante >'
   default_wizard_start_label: Début
   default_wizard_confirmation_label: Terminé
