--- a/config/sync/core.entity_form_display.node.newsletter_agenda.default.yml
+++ b/config/sync/core.entity_form_display.node.newsletter_agenda.default.yml
@@ -23,6 +23,7 @@ content:
       rows: 9
       summary_rows: 3
       placeholder: ''
+      show_summary: false
     third_party_settings: {  }
     region: content
   created:
@@ -32,7 +33,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_evenements:
-    weight: 10
+    weight: 26
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
@@ -92,6 +93,7 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     region: content
     third_party_settings: {  }
 hidden:
