--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -8,6 +8,7 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  captcha: 0
   ckeditor: 0
   color: 0
   comment: 0
@@ -64,8 +65,10 @@ module:
   options: 0
   page_cache: 0
   path: 0
+  path_alias: 0
   quickedit: 0
   rdf: 0
+  recaptcha: 0
   responsive_image: 0
   rest: 0
   rules: 0
